--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--
+NIC DGL-203
+Assignment 3c - Master Stylesheet
+Author: Will Lewthwaite
+Date Last Modified: 12 November, 2021
+-->
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <title>Bootstrap</title>
+  <title>Weathered Oak Media</title>
+  <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Raleway&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="weatheredOakStyle3.css">
 </head>
 <body>
 
