--- a/index.html
+++ b/index.html
@@ -17,11 +17,29 @@ Date Last Modified: 12 November, 2021
   <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Raleway&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="weatheredOakStyle3.css">
 </head>
+
 <body>
+  <nav class="navbar bg-dark navbar-dark navbar-expand-sm">
+    <div class="container">
+      <a class="navbar-brand d-none d-sm-inline-block" href="#index.html">
+        <img src="images/WeatheredOak_FilmStripLogo_Light.png" style="width: 40px;" alt="Weathered Oak Media Logo">
+      </a>
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#profile"></a>
+        <a class="nav-item nav-link" href="#portfolio"></a>
+        <a class="nav-item nav-link" href="#skills"></a>
+        <a class="nav-item nav-link" href="#education"></a> <!-- We don't need no education-->
+        <a class="nav-item nav-link" href="#footer-contact"></a>
+      </div>
+      <span class="navbar-text d-none d-xl-inline-blocks">"And though the course may change sometimes, rivers always
+        reach the sea."</span>
+    </div>
+  </nav>
 
 
-<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
