Edit and style navbar

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@ Date Last Modified: 12 November, 2021
         <img src="images/WeatheredOak_FilmStripLogo_Light.png" style="width: 40px;" alt="Weathered Oak Media Logo">
       </a>
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#profile"></a>
-        <a class="nav-item nav-link" href="#portfolio"></a>
-        <a class="nav-item nav-link" href="#skills"></a>
-        <a class="nav-item nav-link" href="#education"></a> <!-- We don't need no education-->
-        <a class="nav-item nav-link" href="#footer-contact"></a>
+        <a class="nav-item nav-link active" href="#profile">About Me</a>
+        <a class="nav-item nav-link" href="#portfolio">My Work</a>
+        <a class="nav-item nav-link" href="#skills">Skills</a>
+        <a class="nav-item nav-link" href="#education">Education</a> <!-- We don't need no education-->
+        <a class="nav-item nav-link" href="#footer-contact">Contact</a>
       </div>
       <span class="navbar-text d-none d-xl-inline-blocks">"And though the course may change sometimes, rivers always
         reach the sea."</span>
