--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Date Last Modified: 12 November, 2021
 </head>
 
 <body>
-  <nav class="navbar bg-dark navbar-dark navbar-expand-sm">
+  <nav class="navbar navbar-expand-sm" style="background-color: #466273;">
     <div class="container">
       <a class="navbar-brand d-none d-sm-inline-block" href="#index.html">
         <img src="images/WeatheredOak_FilmStripLogo_Light.png" style="width: 40px;" alt="Weathered Oak Media Logo">
@@ -31,8 +31,6 @@ Date Last Modified: 12 November, 2021
         <a class="nav-item nav-link" href="#education">Education</a> <!-- We don't need no education-->
         <a class="nav-item nav-link" href="#footer-contact">Contact</a>
       </div>
-      <span class="navbar-text d-none d-xl-inline-blocks">"And though the course may change sometimes, rivers always
-        reach the sea."</span>
     </div>
   </nav>
 
