Add content for animation

--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@ Date Last Modified: 12 November, 2021
       </div>
     </div>
   </nav>
-
+<!--
+  <div class="boat-wrap">
+            <div class="aqua">
+                <img src="img/Ocean1.png" class="waves">
+            </div>
+            <div class="tugboat"><img src="images/Tugboat.svg"></div>
+            <div class="cloud3"><img src="images/Cloud3.svg"></div>
+            <div class="lighthouse"><img src="images/Lighthouse.svg"></div>
+        </div>
+-->
 
   <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
   <script src="js/popper.min.js"></script>
