--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ Date Last Modified: 12 November, 2021
 </head>
 
 <body>
+  <header class="header">
   <nav class="navbar navbar-expand-sm" style="background-color: #466273;">
     <div class="container">
       <a class="navbar-brand d-none d-sm-inline-block" href="#index.html">
@@ -26,13 +27,27 @@ Date Last Modified: 12 November, 2021
       </a>
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="#profile">About Me</a>
-        <a class="nav-item nav-link" href="#portfolio">My Work</a>
-        <a class="nav-item nav-link" href="#skills">Skills</a>
-        <a class="nav-item nav-link" href="#education">Education</a> <!-- We don't need no education-->
-        <a class="nav-item nav-link" href="#footer-contact">Contact</a>
+        <a class="nav-item nav-link" style="color: #DAD7CD;" href="#portfolio">My Work</a>
+        <a class="nav-item nav-link" style="color: #DAD7CD;" href="#skills">Skills</a>
+        <a class="nav-item nav-link" style="color: #DAD7CD;" href="#education">Education</a> <!-- We don't need no education-->
+        <a class="nav-item nav-link" style="color: #DAD7CD;" href="#footer-contact">Contact</a>
       </div>
     </div>
   </nav>
+
+  <h1 id="about">Weathered Oak Media</h1>
+        <h2>Will Lewthwaite</h2>
+        <h3>Student, Artist, Musician, Photographer</h3>
+        <p>I have worked in a variety of professions and that has provided a wealth of knowledge and experience.
+          In 2020 I returned to school to build on that experience with new skills that I can apply towards a career
+          in
+          design and media.
+          This webpage is a work in progress. As I learn new things the design will also improve.</p>
+        <p>I live in the Comox Valley with my wife and our cat. I enjoy music, art, history, nature, and science.
+          I play guitar, percussion, and some keyboards. I do a lot of home recording, and as a hobby I create videos
+          for my YouTube channel <a href="https://www.youtube.com/channel/UCxy8o0J-DcobOQG56dG_FbA"
+            target="_blank">Weathered Oak Media</a>.</p>
+ </header>
 <!--
   <div class="boat-wrap">
             <div class="aqua">
