--- a/index.html
+++ b/index.html
@@ -35,22 +35,23 @@ Date Last Modified: 12 November, 2021
       </div>
     </div>
   </nav>
-  <header class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <section class="media mb-4" id="profile">
-      <img class="d-flex mr-3 img-fluid rounded" style="width: 100px;" src="images/WLProfile.jpg" alt="Profile Photo">
-      <h1>Weathered Oak Media</h1>
-      <h2>Will Lewthwaite</h2>
-      <h3>Student, Artist, Musician, Photographer</h3>
-      <p>I have worked in a variety of feilds and needed a change.In 2020 I returned to school to build on that
-        experience with new skills that I can apply towards a career
-        in design and media.This webpage is a work in progress. As I learn new things the design will also improve.</p>
-      <p>I live in the Comox Valley with my wife and our cat. I enjoy music, art, history, nature, and science.
-        I play guitar, percussion, and some keyboards. I do a lot of home recording, and as a hobby I create videos
-        for my YouTube channel <a href="https://www.youtube.com/channel/UCxy8o0J-DcobOQG56dG_FbA"
-          target="_blank">Weathered Oak Media</a>.</p>
-    </section>
-  </div>
+  <header class="header jumbotron jumbotron-fluid">
+    <div class="container d-flex ">
+      <section id="profile">
+        <img class="d-flex mr-3 img-fluid rounded" style="width: 300px;" src="images/WLProfile.jpg" alt="Profile Photo">
+        <h1>Weathered Oak Media</h1>
+        <h2>Will Lewthwaite</h2>
+        <h3>Student, Artist, Musician, Photographer</h3>
+        <p class="text-center">In 2020 I returned to school after many years of working in various fields to build on that
+          experience with new skills that I can apply towards a career in design and media.
+          This webpage is a work in progress. As I learn new things the design will also improve.
+        </p>
+        <p class="text-center">I live in the Comox Valley with my wife and our cat. I enjoy music, art, history, nature, and science.
+          I play guitar, percussion, and some keyboards. I do a lot of home recording, and as a hobby I create videos
+          for my YouTube channel <a href="https://www.youtube.com/channel/UCxy8o0J-DcobOQG56dG_FbA"
+            target="_blank">Weathered Oak Media</a>.</p>
+      </section>
+    </div>
   </header>
   <!--
   <div class="boat-wrap">
