Testing header fixes

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ Date Last Modified: 12 November, 2021
 
 <body>
 
-  <nav class="navbar navbar-expand-sm" style="background-color: #466273;">
+  <nav class="navbar navbar-expand-lg" style="background-color: #466273;">
     <div class="container">
       <a class="navbar-brand d-none d-sm-inline-block" href="#index.html">
-        <img src="images/WeatheredOak_FilmStripLogo_Light.png" style="width: 40px;" alt="Weathered Oak Media Logo">
+        <img src="images/WeatheredOak_FilmStripLogo_Light.png" style="width: 100px;" alt="Weathered Oak Media Logo">
       </a>
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="#profile">About Me</a>
@@ -36,17 +36,17 @@ Date Last Modified: 12 November, 2021
     </div>
   </nav>
   <header class="header jumbotron jumbotron-fluid">
-    <div class="container d-flex ">
+    <div class="container d-flex">
       <section id="profile">
-        <img class="d-flex mr-3 img-fluid rounded" style="width: 300px;" src="images/WLProfile.jpg" alt="Profile Photo">
+        <img class="d-flex mr-1 img-fluid rounded" style="width: 300px;" src="images/WLProfile.jpg" alt="Profile Photo">
         <h1>Weathered Oak Media</h1>
         <h2>Will Lewthwaite</h2>
         <h3>Student, Artist, Musician, Photographer</h3>
-        <p class="text-center">In 2020 I returned to school after many years of working in various fields to build on that
+        <p>In 2020 I returned to school after many years of working in various fields to build on that
           experience with new skills that I can apply towards a career in design and media.
           This webpage is a work in progress. As I learn new things the design will also improve.
         </p>
-        <p class="text-center">I live in the Comox Valley with my wife and our cat. I enjoy music, art, history, nature, and science.
+        <p>I live in the Comox Valley with my wife and our cat. I enjoy music, art, history, nature, and science.
           I play guitar, percussion, and some keyboards. I do a lot of home recording, and as a hobby I create videos
           for my YouTube channel <a href="https://www.youtube.com/channel/UCxy8o0J-DcobOQG56dG_FbA"
             target="_blank">Weathered Oak Media</a>.</p>
