--- a/index.html
+++ b/index.html
@@ -50,8 +50,48 @@ Date Last Modified: 12 November, 2021
           I play guitar, percussion, and some keyboards. I do a lot of home recording, and as a hobby I create videos
           for my YouTube channel <a href="https://www.youtube.com/channel/UCxy8o0J-DcobOQG56dG_FbA"
             target="_blank">Weathered Oak Media</a>.</p>
-      </section>
-    </div>
+
+        <button type="button" class="btn btn-primary mt-4" data-toggle="modal" data-target="#contactModal">Say
+          Hello!</button> <!-- CTA button -->
+
+        <div class="modal fade" id="contactModal">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">Say Hello</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <p>
+                  Want to get in touch? Leave your name and email! Don't worry, your info is safe and I won't solicit.
+                </p>
+                <form>
+                  <fieldset class="form-group">
+                    <legend>Your Info</legend>
+
+                    <div class="form-group">
+                      <label class="form-control-label" for="name">Name</label>
+                      <input class="form-control" type="text" id="name" placeholder="Your Name">
+                    </div><!-- form-group -->
+
+                    <div class="form-group">
+                      <label class="form-control-label" for="owneremail">Email</label>
+                      <input class="form-control" type="text" id="owneremail" placeholder="Address">
+                    </div><!-- form-group -->
+                  </fieldset>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button class="btn btn-primary" type="submit">Submit</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Back</button>
+              </div>
+            </div> <!-- Modal content -->
+          </div> <!-- Modal dialogue -->
+        </div> <!-- Modal Contact Form-->
+      </section> <!-- Profile -->
+    </div> <!-- Profile container -->
   </header>
   <!--
   <div class="boat-wrap">
