Apply colors and font family styles

--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@ Date Last Modified: 12 November, 2021
       </div>
     </div>
   </nav>
-  <header class="header jumbotron jumbotron-fluid">
+  <header class="header jumbotron jumbotron-fluid" style="background-color: #4D7893;">
     <div class="container d-flex">
-      <section id="profile">
+      <section id="profile" style="color:#DAD7CD">
         <img class="d-flex mr-1 img-fluid rounded" style="width: 300px;" src="images/WLProfile.jpg" alt="Profile Photo">
-        <h1>Weathered Oak Media</h1>
-        <h2>Will Lewthwaite</h2>
-        <h3>Student, Artist, Musician, Photographer</h3>
-        <p>In 2020 I returned to school after many years of working in various fields to build on that
+        <h1 style="font-family: 'IM Fell English SC', serif">Weathered Oak Media</h1>
+        <h2 style="font-family: 'IM Fell English SC', serif">Will Lewthwaite</h2>
+        <h3 style="font-family: 'Raleway', sans-serif">Student, Artist, Musician, Photographer</h3>
+        <p style="font-family: 'Raleway', sans-serif">In 2020 I returned to school after many years of working in various fields to build on that
           experience with new skills that I can apply towards a career in design and media.
           This webpage is a work in progress. As I learn new things the design will also improve.
         </p>
-        <p>I live in the Comox Valley with my wife and our cat. I enjoy music, art, history, nature, and science.
+        <p style="font-family: 'Raleway', sans-serif">I live in the Comox Valley with my wife and our cat. I enjoy music, art, history, nature, and science.
           I play guitar, percussion, and some keyboards. I do a lot of home recording, and as a hobby I create videos
-          for my YouTube channel <a href="https://www.youtube.com/channel/UCxy8o0J-DcobOQG56dG_FbA"
+          for my YouTube channel <a style="color:#FFE66D" href="https://www.youtube.com/channel/UCxy8o0J-DcobOQG56dG_FbA"
             target="_blank">Weathered Oak Media</a>.</p>
 
         <button type="button" class="btn btn-primary mt-4" data-toggle="modal" data-target="#contactModal">Say
@@ -64,7 +64,7 @@ Date Last Modified: 12 November, 2021
                 </button>
               </div>
               <div class="modal-body">
-                <p>
+                <p style="font-family: 'Raleway', sans-serif">
                   Want to get in touch? Leave your name and email! Don't worry, your info is safe and I won't solicit.
                 </p>
                 <form>
