Add project cards

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Date Last Modified: 12 November, 2021
       </a>
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="#profile">About Me</a>
-        <a class="nav-item nav-link" style="color: #DAD7CD;" href="#portfolio">My Work</a>
+        <a class="nav-item nav-link" style="color: #DAD7CD;" href="#portfolio">Selected Projects</a>
         <a class="nav-item nav-link" style="color: #DAD7CD;" href="#skills">Skills</a>
         <a class="nav-item nav-link" style="color: #DAD7CD;" href="#education">Education</a>
         <!-- We don't need no education-->
@@ -93,6 +93,38 @@ Date Last Modified: 12 November, 2021
       </section> <!-- Profile -->
     </div> <!-- Profile container -->
   </header>
+  <div class="container" id="portfolio">
+    <h2 style="font-family: 'IM Fell English SC', serif">Selected Projects</h2>
+    
+    <div class="card" style="width: 400px;">
+      <img class="card-img-top" src="" alt="">
+      <div class="card-body">
+        <h4 class="card-title">placeholder</h4>
+        <p class="cars-text">description</p>
+    </div>
+   </div>
+    <div class="card" style="width: 400px;">
+      <img class="card-img-top" src="" alt="">
+      <div class="card-body">
+        <h4 class="card-title">placeholder</h4>
+        <p class="cars-text">description</p>
+    </div>
+   </div>
+    <div class="card" style="width: 400px;">
+      <img class="card-img-top" src="" alt="">
+      <div class="card-body">
+        <h4 class="card-title">placeholder</h4>
+        <p class="cars-text">description</p>
+    </div>
+   </div>
+    <div class="card" style="width: 400px;">
+      <img class="card-img-top" src="" alt="">
+      <div class="card-body">
+        <h4 class="card-title">placeholder</h4>
+        <p class="cars-text">description</p>
+    </div>
+   </div>
+  </div>
   <!--
   <div class="boat-wrap">
             <div class="aqua">
