Populate and modify cards

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Date Last Modified: 12 November, 2021
         <img src="images/WeatheredOak_FilmStripLogo_Light.png" style="width: 150px;" alt="Weathered Oak Media Logo">
       </a>
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#profile">About Me</a>
+        <a class="nav-item nav-link active" style="color: #9DB6C4;" href="#profile">About Me</a>
         <a class="nav-item nav-link" style="color: #DAD7CD;" href="#portfolio">Selected Projects</a>
         <a class="nav-item nav-link" style="color: #DAD7CD;" href="#skills">Skills</a>
         <a class="nav-item nav-link" style="color: #DAD7CD;" href="#education">Education</a>
@@ -42,14 +42,16 @@ Date Last Modified: 12 November, 2021
         <h1 style="font-family: 'IM Fell English SC', serif">Weathered Oak Media</h1>
         <h2 style="font-family: 'IM Fell English SC', serif">Will Lewthwaite</h2>
         <h3 style="font-family: 'Raleway', sans-serif">Student, Artist, Musician, Photographer</h3>
-        <p style="font-family: 'Raleway', sans-serif">In 2020 I returned to school after many years of working in various fields to build on that
+        <p style="font-family: 'Raleway', sans-serif">In 2020 I returned to school after many years of working in
+          various fields to build on that
           experience with new skills that I can apply towards a career in design and media.
           This webpage is a work in progress. As I learn new things the design will also improve.
         </p>
-        <p style="font-family: 'Raleway', sans-serif">I live in the Comox Valley with my wife and our cat. I enjoy music, art, history, nature, and science.
+        <p style="font-family: 'Raleway', sans-serif">I live in the Comox Valley with my wife and our cat. I enjoy
+          music, art, history, nature, and science.
           I play guitar, percussion, and some keyboards. I do a lot of home recording, and as a hobby I create videos
-          for my YouTube channel <a style="color:#FFE66D" href="https://www.youtube.com/channel/UCxy8o0J-DcobOQG56dG_FbA"
-            target="_blank">Weathered Oak Media</a>.</p>
+          for my YouTube channel <a style="color:#FFE66D"
+            href="https://www.youtube.com/channel/UCxy8o0J-DcobOQG56dG_FbA" target="_blank">Weathered Oak Media</a>.</p>
 
         <button type="button" class="btn btn-primary mt-4" data-toggle="modal" data-target="#contactModal">Say
           Hello!</button> <!-- CTA button -->
@@ -95,36 +97,62 @@ Date Last Modified: 12 November, 2021
   </header>
   <div class="container" id="portfolio">
     <h2 style="font-family: 'IM Fell English SC', serif">Selected Projects</h2>
-    
-    <div class="card" style="width: 400px;">
-      <img class="card-img-top" src="" alt="">
-      <div class="card-body">
-        <h4 class="card-title">placeholder</h4>
-        <p class="cars-text">description</p>
-    </div>
-   </div>
-    <div class="card" style="width: 400px;">
-      <img class="card-img-top" src="" alt="">
-      <div class="card-body">
-        <h4 class="card-title">placeholder</h4>
-        <p class="cars-text">description</p>
-    </div>
-   </div>
-    <div class="card" style="width: 400px;">
-      <img class="card-img-top" src="" alt="">
-      <div class="card-body">
-        <h4 class="card-title">placeholder</h4>
-        <p class="cars-text">description</p>
-    </div>
-   </div>
-    <div class="card" style="width: 400px;">
-      <img class="card-img-top" src="" alt="">
-      <div class="card-body">
-        <h4 class="card-title">placeholder</h4>
-        <p class="cars-text">description</p>
-    </div>
-   </div>
-  </div>
+
+    <div class="card-columns">
+      <div class="col">
+        <div class="card mb-2" style="width: 400px;">
+          <img class="card-img-top" src="images/GuitarNerdsCover.jpg" alt="Magazine Cover">
+          <div class="card-body">
+            <h4 class="card-title" style="font-family: 'IM Fell English SC', serif">Guitar Nerds Magazine Cover</h4>
+            <p class="card-text" style="font-family: 'Raleway', sans-serif">For my DGL 112 Typography course, a major project was designing a magazine cover plus
+              the first few
+              pages. This included advertising, a letter from the editor, and an article. I designed the entire project
+              from
+              scratch, wrote all of the content, and used my own photos with assistance from my wife.
+              The project also provided an opportunity to have a bit of fun and live out a teenage fantasy by putting
+              myself on
+              the cover.</p>
+          </div>
+        </div> <!-- card -->
+      </div> <!-- col -->
+      <div class="col">
+        <div class="card mb-2" style="width: 400px;">
+          <img class="card-img-top" src="images/WillCaveArt.jpg" alt="Cave Art Drawing">
+          <div class="card-body">
+            <h4 class="card-title" style="font-family: 'IM Fell English SC', serif">BC 30,000 BC</h4>
+            <p class="card-text" style="font-family: 'Raleway', sans-serif">As a term project in FIN 100 Art History, students were asked to analyze and critique a
+              work of art from
+              a period of history within the textbook and then come up with their own creative response in whatever
+              form. I chose the
+              artwork seen in prehistoric cave drawings found in France that are estimated to be well over 30,000 years
+              old. My creative response
+              was in two parts: I created a large drawing in the style and method of the ancient artists and produced a
+              video documenting
+              the entire project. This involved research, voice-over recordings, and composing and recording the
+              soundtrack.</p>
+          </div>
+        </div> <!-- card -->
+      </div> <!-- col -->
+      <div class="col">
+      <div class="card mb-2" style="width: 400px;">
+        <img class="card-img-top" src="images/BeachMasse3_WL.jpg" alt="Illustrated poster">
+        <div class="card-body">
+          <h4 class="card-title" style="font-family: 'IM Fell English SC', serif">Angry Seagull Social Good Poster</h4>
+          <p class="card-text" style="font-family: 'Raleway', sans-serif">A notable project from my DGL 102 course was a Social Good Call to Action poster. Using
+            design principles
+            we learned throughout the year, we chose a worthy cause and created posters to raise awareness of an issue
+            with the
+            call to action clearly noted. Plastic pollution on our beaches is a worldwide issue, so my poster urges
+            people to get
+            involved in beach cleanups through the Surfrider Foundation. The style of my design is a tribute to the
+            psychedelic concert
+            posters of 1960s artist Bob Masse, with a modern twist. The angry seagull became a bit of a mascot for my
+            entire first year.</p>
+        </div>
+      </div> <!-- card -->
+    </div> <!-- col -->
+  </div> <!-- Rows and columns -->
+  </div> <!-- Portfolio Container -->
   <!--
   <div class="boat-wrap">
             <div class="aqua">
