Work with cards, columns

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ Date Last Modified: 12 November, 2021
       <div class="navbar-nav">
         <a class="nav-item nav-link active" style="color: #9DB6C4;" href="#profile">About Me</a>
         <a class="nav-item nav-link" style="color: #DAD7CD;" href="#portfolio">Selected Projects</a>
+        <a class="nav-item nav-link" style="color: #DAD7CD;" href="#animations">Animations</a>
         <a class="nav-item nav-link" style="color: #DAD7CD;" href="#skills">Skills</a>
         <a class="nav-item nav-link" style="color: #DAD7CD;" href="#education">Education</a>
         <!-- We don't need no education-->
@@ -100,7 +101,7 @@ Date Last Modified: 12 November, 2021
 
     <div class="card-columns">
       <div class="col">
-        <div class="card mb-2" style="width: 400px;">
+        <div class="card mb-5" style="width: 400px;">
           <img class="card-img-top" src="images/GuitarNerdsCover.jpg" alt="Magazine Cover">
           <div class="card-body">
             <h4 class="card-title" style="font-family: 'IM Fell English SC', serif">Guitar Nerds Magazine Cover</h4>
@@ -112,24 +113,6 @@ Date Last Modified: 12 November, 2021
               The project also provided an opportunity to have a bit of fun and live out a teenage fantasy by putting
               myself on
               the cover.</p>
-          </div>
-        </div> <!-- card -->
-      </div> <!-- col -->
-      <div class="col">
-        <div class="card mb-2" style="width: 400px;">
-          <img class="card-img-top" src="images/WillCaveArt.jpg" alt="Cave Art Drawing">
-          <div class="card-body">
-            <h4 class="card-title" style="font-family: 'IM Fell English SC', serif">BC 30,000 BC</h4>
-            <p class="card-text" style="font-family: 'Raleway', sans-serif">As a term project in FIN 100 Art History, students were asked to analyze and critique a
-              work of art from
-              a period of history within the textbook and then come up with their own creative response in whatever
-              form. I chose the
-              artwork seen in prehistoric cave drawings found in France that are estimated to be well over 30,000 years
-              old. My creative response
-              was in two parts: I created a large drawing in the style and method of the ancient artists and produced a
-              video documenting
-              the entire project. This involved research, voice-over recordings, and composing and recording the
-              soundtrack.</p>
           </div>
         </div> <!-- card -->
       </div> <!-- col -->
@@ -151,8 +134,30 @@ Date Last Modified: 12 November, 2021
         </div>
       </div> <!-- card -->
     </div> <!-- col -->
+    <div class="col">
+      <div class="card mb-5" style="width: 400px;">
+        <img class="card-img-top" src="images/WillCaveArt.jpg" alt="Cave Art Drawing">
+        <div class="card-body">
+          <h4 class="card-title" style="font-family: 'IM Fell English SC', serif">BC 30,000 BC</h4>
+          <p class="card-text" style="font-family: 'Raleway', sans-serif">As a term project in FIN 100 Art History, students were asked to analyze and critique a
+            work of art from
+            a period of history within the textbook and then come up with their own creative response in whatever
+            form. I chose the
+            artwork seen in prehistoric cave drawings found in France that are estimated to be well over 30,000 years
+            old. My creative response
+            was in two parts: I created a large drawing in the style and method of the ancient artists and produced a
+            video documenting
+            the entire project. This involved research, voice-over recordings, and composing and recording the
+            soundtrack.</p>
+            <a href="https://www.youtube.com/watch?v=9argG19zbzU" class="btn btn-success">Watch the video!</a>
+        </div>
+      </div> <!-- card -->
+    </div> <!-- col -->
   </div> <!-- Rows and columns -->
   </div> <!-- Portfolio Container -->
+  
+  <div class="container" id="animations">
+  
   <!--
   <div class="boat-wrap">
             <div class="aqua">
@@ -163,7 +168,7 @@ Date Last Modified: 12 November, 2021
             <div class="lighthouse"><img src="images/Lighthouse.svg"></div>
         </div>
 -->
-
+</div> <!-- Animations -->
   <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
