Adjust placement, test animations

--- a/index.html
+++ b/index.html
@@ -99,13 +99,14 @@ Date Last Modified: 12 November, 2021
   <div class="container" id="portfolio">
     <h2 style="font-family: 'IM Fell English SC', serif">Selected Projects</h2>
 
-    <div class="card-columns">
+    <div class="row row-cols-2">
       <div class="col">
-        <div class="card mb-5" style="width: 400px;">
+        <div class="card" style="width: 400px;">
           <img class="card-img-top" src="images/GuitarNerdsCover.jpg" alt="Magazine Cover">
           <div class="card-body">
             <h4 class="card-title" style="font-family: 'IM Fell English SC', serif">Guitar Nerds Magazine Cover</h4>
-            <p class="card-text" style="font-family: 'Raleway', sans-serif">For my DGL 112 Typography course, a major project was designing a magazine cover plus
+            <p class="card-text" style="font-family: 'Raleway', sans-serif">For my DGL 112 Typography course, a major
+              project was designing a magazine cover plus
               the first few
               pages. This included advertising, a letter from the editor, and an article. I designed the entire project
               from
@@ -117,58 +118,61 @@ Date Last Modified: 12 November, 2021
         </div> <!-- card -->
       </div> <!-- col -->
       <div class="col">
-      <div class="card mb-2" style="width: 400px;">
-        <img class="card-img-top" src="images/BeachMasse3_WL.jpg" alt="Illustrated poster">
-        <div class="card-body">
-          <h4 class="card-title" style="font-family: 'IM Fell English SC', serif">Angry Seagull Social Good Poster</h4>
-          <p class="card-text" style="font-family: 'Raleway', sans-serif">A notable project from my DGL 102 course was a Social Good Call to Action poster. Using
-            design principles
-            we learned throughout the year, we chose a worthy cause and created posters to raise awareness of an issue
-            with the
-            call to action clearly noted. Plastic pollution on our beaches is a worldwide issue, so my poster urges
-            people to get
-            involved in beach cleanups through the Surfrider Foundation. The style of my design is a tribute to the
-            psychedelic concert
-            posters of 1960s artist Bob Masse, with a modern twist. The angry seagull became a bit of a mascot for my
-            entire first year.</p>
-        </div>
-      </div> <!-- card -->
-    </div> <!-- col -->
-    <div class="col">
-      <div class="card mb-5" style="width: 400px;">
-        <img class="card-img-top" src="images/WillCaveArt.jpg" alt="Cave Art Drawing">
-        <div class="card-body">
-          <h4 class="card-title" style="font-family: 'IM Fell English SC', serif">BC 30,000 BC</h4>
-          <p class="card-text" style="font-family: 'Raleway', sans-serif">As a term project in FIN 100 Art History, students were asked to analyze and critique a
-            work of art from
-            a period of history within the textbook and then come up with their own creative response in whatever
-            form. I chose the
-            artwork seen in prehistoric cave drawings found in France that are estimated to be well over 30,000 years
-            old. My creative response
-            was in two parts: I created a large drawing in the style and method of the ancient artists and produced a
-            video documenting
-            the entire project. This involved research, voice-over recordings, and composing and recording the
-            soundtrack.</p>
+        <div class="card" style="width: 400px;">
+          <img class="card-img-top" src="images/BeachMasse3_WL.jpg" alt="Illustrated poster">
+          <div class="card-body">
+            <h4 class="card-title" style="font-family: 'IM Fell English SC', serif">Angry Seagull Social Good Poster
+            </h4>
+            <p class="card-text" style="font-family: 'Raleway', sans-serif">A notable project from my DGL 102 course was
+              a Social Good Call to Action poster. Using
+              design principles
+              we learned throughout the year, we chose a worthy cause and created posters to raise awareness of an issue
+              with the
+              call to action clearly noted. Plastic pollution on our beaches is a worldwide issue, so my poster urges
+              people to get
+              involved in beach cleanups through the Surfrider Foundation. The style of my design is a tribute to the
+              psychedelic concert
+              posters of 1960s artist Bob Masse, with a modern twist. The angry seagull became a bit of a mascot for my
+              entire first year.</p>
+          </div>
+        </div> <!-- card -->
+      </div> <!-- col -->
+      <div class="col">
+        <div class="card" style="width: 400px;">
+          <img class="card-img-top" src="images/WillCaveArt.jpg" alt="Cave Art Drawing">
+          <div class="card-body">
+            <h4 class="card-title" style="font-family: 'IM Fell English SC', serif">BC 30,000 BC</h4>
+            <p class="card-text" style="font-family: 'Raleway', sans-serif">As a term project in FIN 100 Art History,
+              students were asked to analyze and critique a
+              work of art from
+              a period of history within the textbook and then come up with their own creative response in whatever
+              form. I chose the
+              artwork seen in prehistoric cave drawings found in France that are estimated to be well over 30,000 years
+              old. My creative response
+              was in two parts: I created a large drawing in the style and method of the ancient artists and produced a
+              video documenting
+              the entire project. This involved research, voice-over recordings, and composing and recording the
+              soundtrack.</p>
             <a href="https://www.youtube.com/watch?v=9argG19zbzU" class="btn btn-success">Watch the video!</a>
-        </div>
-      </div> <!-- card -->
-    </div> <!-- col -->
-  </div> <!-- Rows and columns -->
+          </div>
+        </div> <!-- card -->
+      </div> <!-- col -->
+    </div> <!-- Rows and columns -->
   </div> <!-- Portfolio Container -->
-  
-  <div class="container" id="animations">
-  
-  <!--
-  <div class="boat-wrap">
-            <div class="aqua">
-                <img src="img/Ocean1.png" class="waves">
-            </div>
-            <div class="tugboat"><img src="images/Tugboat.svg"></div>
-            <div class="cloud3"><img src="images/Cloud3.svg"></div>
-            <div class="lighthouse"><img src="images/Lighthouse.svg"></div>
-        </div>
--->
-</div> <!-- Animations -->
+
+  <div class="container d-sm-inline-block" id="animations" style="background-color: black;">
+    <h2 style="color:#DAD7CD; font-family:'IM Fell English SC', serif">Animations</h2>
+    <p style="color:#DAD7CD; font-family: 'Raleway', sans-serif">I created all artwork in Adobe Illustrator and the
+      animation features were sourced from tutorial materials.</p>
+    <div class="porthole">
+      <div class="boat-wrap">
+        <div class="aqua"><img src="images/Ocean1.png" class="waves"></div>
+        <div class="tugboat"><img src="images/Tugboat.svg"></div>
+        <div class="cloud3"><img src="images/Cloud3.svg"></div>
+        <div class="lighthouse"><img src="images/Lighthouse.svg"></div>
+      </div>
+    </div>
+  </div> <!-- Animations -->
   <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
