Add image content, create border

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@ Date Last Modified: 12 November, 2021
     <h2 style="color:#DAD7CD; font-family:'IM Fell English SC', serif">Animations</h2>
     <p style="color:#DAD7CD; font-family: 'Raleway', sans-serif">I created all artwork in Adobe Illustrator and the
       animation features were sourced from tutorial materials.</p>
-    <section class="container" style="height: 800px;" id="porthole">
-      <div class="row h-100" id="boat-wrap">
+    <section class="container" id="porthole">
+      <div class="row border border-white" id="boat-wrap">
         <div class="col">
           <div class="aqua"><img src="images/Ocean1.png" class="waves"></div>
           <div class="tugboat"><img src="images/Tugboat.svg"></div>
