Add animation content

--- a/index.html
+++ b/index.html
@@ -167,14 +167,35 @@ Date Last Modified: 12 November, 2021
     <section class="container" id="porthole">
       <div class="row border border-white" id="boat-wrap">
         <div class="col">
-          <div class="aqua"><img src="images/Ocean1.png" class="waves"></div>
-          <div class="tugboat"><img src="images/Tugboat.svg"></div>
           <div class="cloud3"><img src="images/Cloud3.svg"></div>
+          <div class="tugboat"><img src="images/Tugboat.svg"></div>
           <div class="lighthouse"><img src="images/Lighthouse.svg"></div>
+          <div class="aqua"><img src="images/Ocean1.png" class="waves"></div>
+        </div>
+      </div>
+      <div class="row border border-danger" id="city-wrap" style="background-color: #9DB6C4;">
+        <div class="col">
+          <div class="sky-scraper">
+            <img src="images/City.svg" alt="skyscrapers"> <!-- My own drawing -->
+          </div>
+          <img src="images/Cloud4.svg" alt="clouds" class="cloud4"> <!-- My own drawing -->
+          <img src="images/UFO.svg" alt="UFO" class="UFO"> <!-- My own drawing -->
         </div>
       </div>
     </section>
   </div> <!-- Animations -->
+  <footer>
+    <div class="content-wrap" id="contact" style="background-color:#466273;">
+      <h2 style="color:#DAD7CD; font-family:'IM Fell English SC', serif">Say Hello!</h2>
+      <p style="color:#DAD7CD; font-family: 'Raleway', sans-serif">Weathered Oak Media &#8226; 12345 Some Random Street
+        &nbsp; Comox BC &#8226; (250) 555-1234 </p>
+      <ul class="contact-list">
+        <li><a style="color: #9DB6C4;" href="mailto:email@example.com">email@example.com</a></li>
+        <li><a style="color: #9DB6C4;" href="https://www.facebook.com/WeatheredOakMedia"
+            target="_blank">WeatheredOakMedia</a></li>
+      </ul>
+    </div>
+  </footer>
   <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
